# phasex

./: README.md
source/: CMakeLists.txt  external.h  functions.cpp  functions.hpp  main.cpp  phase-ps.cpp  phase-ps.hpp  recode.cpp  recode.hpp  vcf.cpp  vcf.hpp
support/: README.md  mthreadscmd.pl  split_to_rbp_4.0.pl
